# Nove-Mart-Backend

./: .env  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0e622aab5d50_initial_migration.py
app/: main.py
app/core/: config.py  security.py
app/database/: database.py
app/models/: cart_model.py  category_model.py  order_model.py  product_model.py  user_model.py
app/routers/: auth_router.py  cart_router.py  category_router.py  order_router.py  product_router.py
app/schemas/: cart_schema.py  category_schema.py  order_schema.py  product_schema.py  user_schema.py
app/services/: auth_service.py  cart_service.py  category_service.py  order_service.py  product_service.py
app/utils/: dependencies.py
